fix alignment of checkbox tree icons and introduce --icon-size-default variable to use it for calc on various places

--- a/app/src/styles/_variables.scss
+++ b/app/src/styles/_variables.scss
@@ -17,6 +17,7 @@
 	--sidebar-section-trigger-height: 3.375rem;
 	--sidebar-section-trigger-icon-size: 1.25rem;
 	--sidebar-section-content-padding: 1.125rem;
+	--icon-size-default: 1.25rem;
 	--input-height-md: 9.4375rem;
 	--input-height-lg: 16.875rem;
 	--input-height-xl: 28.125rem;
